more models added

--- a/models/staging/clean_source.yml
+++ b/models/staging/clean_source.yml
@@ -2,6 +2,6 @@
 version: 2
 
 models:
-  - name: extract
-    description: "extract dbt data"
+  - name: clean_source
+    description: "Clean Source"
 
