--- a/models/mart/manual/rate_code.yml
+++ b/models/mart/manual/rate_code.yml
@@ -1,6 +1,6 @@
 version: 2
 
 models:
-  - name: dim_rate_code
+  - name: rate_code
     description: "generated from https://www.nyc.gov/assets/tlc/downloads/pdf/data_dictionary_trip_records_yellow.pdf"
 
